--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,11 @@
 			<version>1.4</version>
 		</dependency>
 
+    <dependency>
+        <groupId>org.mongodb.morphia</groupId>
+        <artifactId>morphia</artifactId>
+        <version>1.0.0-rc0</version>
+    </dependency>
 
 <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
 <dependency>
